--- a/VpC2.ipynb
+++ b/VpC2.ipynb
@@ -83,21 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'transformers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[61], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorchmetrics\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtensorboard\u001b[39;00m \u001b[39mimport\u001b[39;00m SummaryWriter\n\u001b[0;32m---> 13\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtransformers\u001b[39;00m \u001b[39mimport\u001b[39;00m AutoFeatureExtractor\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'transformers'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Libraries\n",
     "import numpy as np\n",
@@ -111,23 +99,25 @@
     "import torchsummary\n",
     "import torchmetrics\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
-    "from transformers import AutoFeatureExtractor"
+    "from transformers import AutoFeatureExtractor\n",
+    "from datasets import load_dataset, Image\n",
+    "from torchvision import transforms\n",
+    "from torchvision.transforms import Compose, Normalize, RandomResizedCrop, ColorJitter, ToTensor\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset, Image\n",
     "\n",
-    "data_set = load_dataset(\"keremberke/license-plate-object-detection\", name=\"full\", split='train', streaming=True)"
+    "data_set = load_dataset(\"keremberke/license-plate-object-detection\", name=\"full\", split='train')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +130,7 @@
        " 'objects': Sequence(feature={'id': Value(dtype='int64', id=None), 'area': Value(dtype='int64', id=None), 'bbox': Sequence(feature=Value(dtype='float32', id=None), length=4, id=None), 'category': ClassLabel(names=['license_plate'], id=None)}, length=-1, id=None)}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,6 +138,24 @@
    "source": [
     "# Dataset features\n",
     "data_set.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data augmentation\n",
+    "tranform_ds = transforms.Compose(\n",
+    "    [transforms.ToTensor(), transforms.ToPILImage(), transforms.Resize(256), transforms.RandomCrop(224)])"
    ]
   }
  ],
