--- a/VpC2.ipynb
+++ b/VpC2.ipynb
@@ -339,11 +339,41 @@
     "image = transform_img(img)\n",
     "image.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exportar imágenes de placas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ds_name in [\"train\", \"validation\", \"test\"]:\n",
+    "    images = data_set[ds_name][::]['image']\n",
+    "    objects = data_set[ds_name][::]['objects']\n",
+    "    for img, obj in zip(images, objects):\n",
+    "        if len(obj['id']) == 1:\n",
+    "            x, y, w, h = map(int, obj['bbox'][0])\n",
+    "            cropped_img = img.crop((x, y, x + w, y + h))\n",
+    "            cropped_img.save(f\"{ds_name}/{obj['id'][0]}.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -357,9 +387,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.13"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
