Se añadió un código para exportar las placas

--- a/VpC2.ipynb
+++ b/VpC2.ipynb
@@ -349,11 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ds_name in [\"train\", \"validation\", \"test\"]:\n",
+    "import os\n",
+    "\n",
+    "carpetas = [\"train\", \"validation\", \"test\"]\n",
+    "for carpeta in carpetas:\n",
+    "    if not os.path.exists(carpeta):\n",
+    "        os.makedirs(carpeta)\n",
+    "\n",
+    "for ds_name in carpetas:\n",
     "    images = data_set[ds_name][::]['image']\n",
     "    objects = data_set[ds_name][::]['objects']\n",
     "    for img, obj in zip(images, objects):\n",
